# mowgli

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/create_users/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/commands/: get_annual.rs  mod.rs  set_annual.rs  use_annual.rs
src/models/: user.rs
